--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <p>this is a new file</p>
 <p>a new feature branch is created (dropdown)</p>
 <p>a new feature branch is created(button)</p>
+<p>I have made these changes</p>
