--- a/index.html
+++ b/index.html
@@ -3,3 +3,4 @@
 <p>a new feature branch is created(button)</p>
 <p>I have made these changes</p>
 <p>priyanshu pradhan</p>
+<p>Sudhanshu Pradhan</p>
